<resources>
    <string name="app_name">Gastos De Viagem</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="preco_litro">Preço por litro</string>
    <string name="autononomia">Autononomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total">Seu gasto total será de:</string>
</resources>